<resources>
    <string name="app_name" translatable="false">Practica2</string>
    <string name="get_quotations">Get quotations</string>
    <string name="favourite_quotations">Favourite quotations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="quotation_shake" translatable="false">Quotation Shake</string>
    <string name="random_quotation">Random quotations</string>
    <string name="about_content">Quotation Shake by    Maxime Le Feuvre   malefeu@inf.upv.es  2019</string>
    <string name="name_user">Name that identifies the user</string>
    <string name="insert_name">Insert your name</string>
    <string name="language_choice">Quotations will be received in the selected language</string>
    <string name="http_method">Web requests will be performed using the selected HTTP method</string>
    <string name="get" translatable="false">GET</string>
    <string name="post" translatable="false">POST</string>
    <string name="author_info">Author info</string>
    <string name="press_refresh">Hello %1s! Press Refresh to get a new quotation</string>
    <string name="sample_quotation">This is a sample quotation</string>
    <string name="sample_author">This is a sample author</string>
    <string name="name">Nameless one</string>
    <string name="deleteQuote">Are you sure that you want to delete this quotation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="clear_all">Clear all</string>
    <string name="delete_all_favourite_quotes">Are you sure you want to delete all your favourite quotes ?</string>
</resources>
